# firellm

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: rag_demo.py
src/firellm/: __init__.py  agent_tester.py  cli.py  core.py  delivery.py  injection_engine.py  injection_payloads.py  profiler.py  rag_simulator.py  reporter.py  types.py
tests/: test_cli.py  test_core.py  test_injection_engine.py  test_rag_simulator.py  test_reporter.py
