[project]
name = "firellm"
version = "0.1.0"
description = "Adversarial testing framework for LLM-integrated applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["LLM", "security", "RAG", "prompt injection", "red teaming"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "click>=8.2",
    "httpx>=0.27",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "pytest>=8.0",
    "weasyprint>=57.0",
]

[project.optional-dependencies]
cli = ["click>=8.2"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
pythonpath = ["src"]
